syntax = "proto3";

package product;

option go_package = "product-service/proto;proto";

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  string category_id = 5;
  string created_by = 6;
}
